--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "mongoose": "^6.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "8.4.1",
