--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-paginate": "^8.1.0",
+    "sharp": "^0.29.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
