--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "bcryptjs": "^2.4.3",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^6.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
